--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,6 +11,7 @@
     <item
         android:id="@+id/logout"
         android:title="Logout"
-        app:showAsAction="never"/>
+        app:showAsAction="always"
+        />
 
 </menu>
